frontend/test/should_fail/enum_model_010.gm
enum et1 {
	a,
	c = d + 7,
	d,
	e
}

